--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
